# SSM-demo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/video/: server.py
apps/web/: app.js  index.html  styles.css
configs/: platform.yaml
configs/cv/: default.yaml
configs/ets/: default.yaml
configs/vlm/: default.yaml
cv/: __init__.py  _demo_services.py  _vlm_train_ui.py  cfg.py  eval.py  export.py  inference.py  paths.py  post_deploy.py  ssDet.py  train.py
cv/api/: __init__.py  api.py  handlers.py  queue.py
cv/configs/: default.yaml
cv/core/: assembly.py  detector.py  exporting.py  loss.py  manifold.py  runtime.py  tasking.py  training.py
cv/deploy/: __init__.py  pipeline.py
cv/inference/: __init__.py  detector.py
cv/scripts/: deploy.py  eval.py  export_onnx.py  infer.py  train.py
cv/tools/: augment_yolo_detection_dataset.py
cv/utils/: datasets.py  tool.py
data/ets/: New_York_Air_Quality.csv
docker/: Dockerfile.ets  docker-compose.yml
docs/: architecture.md  legacy.md  实验汇总1.md  实验汇总_ett.md
docs/ets/: 实验汇总1.md
docs/runbooks/: demo.md
ets/: README.md  __init__.py
ets/configs/: default.yaml
ets/data/: datamodule.py  dataset.py  ms_input.py  preprocess.py
ets/engine/: __init__.py  backtest.py  inference.py  predictor.py
ets/export/: onnx.py
ets/models/: __init__.py  base.py  dlinear.py  ets_a.py  ets_b.py  ets_c.py  ets_h.py  tcn.py  (+1 more)
ssdet/: __init__.py  cfg.py  paths.py
ssm/: bootstrap.py  cli.py  config.py  paths.py  video.py
ssm_common/: config.py  paths.py
vlm/: __init__.py  client.py  prompts.py
(+250 files in other folders)
