[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm"
version = "0.1.0"
description = "Sunshink ML platform: CV + ETS + VLM"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "onnx>=1.15",
    "onnxruntime>=1.16",
    "cryptography",
    "tqdm",
    "pillow",
    "pycocotools",
    "onnxsim",
    "opencv-python",
    "albumentations",
    "requests",
]

[project.scripts]
ssm = "ssm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cv*", "ets*", "vlm*", "ssm_common*", "ssm*"]
